# greyroze303-Formerly-Greyrose-

./: .gitignore  .gitmodules  AGENTS.md  README.md  _dbpeek.csx  build.sh
.github/workflows/: greyrose-deploy.yml  wizcrawl303-deploy.yml
Wizard101 April of 2019/: Install Log.txt  LocalPackagesList.txt
Wizard101 April of 2019/Data/GameData/: Gardening1688849995998761.fav  QuickChat191965934135706025.fav  defaultconfig.xml
Wizard101 April of 2019/GreyrOze303/tex/: greyrose303_logo.pdn  icons.jfif
Wizard101 April of 2019/PatchClient/BankA/: BaseMessages.xml  ExtendedBaseMessages.xml  PatchConfig.xml  PatchMessages.xml  WizardLauncher.Log.txt  wizard101.skf.orig
Wizard101 April of 2019/PatchClient/BankB/: LoginMessages.xml  WizardLauncher.Log.txt
Wizard101 April of 2019/PatchInfo/: LatestFileList.xml
scripts/: setup-submodules.ps1
wizard101/: WizPS.sln
wizard101/Greyrose/: ClientSession.cs  DataHandler.cs  Dockerfile  GameHandoff.cs  Greyrose.csproj  MessageCrafter.cs  PlayerData.cs  Program.cs  ServerLog.cs
wizard101/Greyrose/Branding/: BrandingCommand.cs  ExeIconResource.cs  IconFactory.cs  SkfBrandingPatcher.cs
wizard101/Greyrose/Data/: CharacterInfoCodec.cs  CreatedZoneLoginBlob.cs  DataStore.cs  Database.cs  DefaultGameData.cs  DefaultLoginBlob.cs  DefaultPatchData.cs  DefaultZoneBlob.cs  DmlLatestFileListBuilder.cs  DmlServerListBuilder.cs  DmlTableStreamValidator.cs  DmlTableWriter.cs  (+15 more)
wizard101/Greyrose/Tools/_kiclass/kiclass-0.7.1/: .gitignore  Cargo.toml  PKG-INFO  README.md  build.bat  convert_worlddata.py  kiclass.pyi  pyproject.toml  zone.nav
wizard101/Greyrose/Tools/_kiclass/kiclass-0.7.1/.github/workflows/: ci.yml  publish.yml
wizard101/Greyrose/Tools/_kiclass/kiclass-0.7.1/src/: hashing.rs  lib.rs  nav.rs  poi.rs  python_wrappers.rs
wizard101/Greyrose/Tools/_kiclass/kiclass-0.7.1/src/bin_xml/: deserialize.rs
wizard101/Greyrose/Tools/_kiclass/kiclass-0.7.1/src/classes/: builtins.rs  container.rs  default.rs  errors.rs  flags.rs  layout.rs  memory.rs  mod.rs  string_ptr.rs  ty.rs  xml.rs
wizard101/Greyrose/Tools/_kiclass/kiclass-0.7.1/src/json/: mod.rs
(+123 files in other folders)
