[tool.maturin]
module-name = "kiclass"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "kiclass"
dynamic = ["version"]
description = "Python bindings and Rust tooling for working with KingsIsle class and binary XML data"
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{name = "Spiral404", email = "noreply@spiral404.com"},
]
keywords = ["wizard101", "kingsisle", "binary-xml", "serialization"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Rust",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Text Processing :: Markup :: XML",
]